--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
 	"scripts": {
 		"start": "rollup -c -w",
 		"build": "rollup -c",
-		"prepare": "npm run build"
+		"prepare": "npm run build",
+		"storybook": "start-storybook -p 6006",
+		"build-storybook": "build-storybook"
 	},
 	"repository": {
 		"type": "git",
@@ -27,11 +29,20 @@
 	},
 	"license": "ISC",
 	"devDependencies": {
+		"@babel/core": "^7.17.5",
 		"@rollup/plugin-commonjs": "^16.0.0",
 		"@rollup/plugin-node-resolve": "^10.0.0",
+		"@storybook/addon-actions": "^6.4.19",
+		"@storybook/addon-essentials": "^6.4.19",
+		"@storybook/addon-interactions": "^6.4.19",
+		"@storybook/addon-links": "^6.4.19",
+		"@storybook/react": "^6.4.19",
+		"@storybook/testing-library": "^0.0.9",
 		"@types/react": "^17.0.39",
+		"babel-loader": "^8.2.3",
 		"prettier": "^2.1.2",
 		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
 		"rollup": "^2.33.1",
 		"rollup-plugin-peer-deps-external": "^2.2.4",
 		"rollup-plugin-typescript2": "^0.29.0",
