--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"build": "rollup -c",
 		"prepare": "npm run build",
 		"storybook": "start-storybook -p 6006",
-		"build-storybook": "build-storybook"
+		"build-storybook": "npm run build && build-storybook"
 	},
 	"repository": {
 		"type": "git",
