--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"rollup": "^2.33.1",
+		"rollup-plugin-delete": "^2.0.0",
 		"rollup-plugin-peer-deps-external": "^2.2.4",
 		"rollup-plugin-typescript2": "^0.29.0",
 		"typescript": "^4.6.2"
