Add dev alias to start

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	"scripts": {
 		"start": "rollup -c -w",
 		"build": "rollup -c",
+		"dev": "npm start",
 		"prepare": "npm run build",
 		"storybook": "start-storybook -p 6006",
 		"build-storybook": "npm run build && build-storybook"
