--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
 	"module": "./dist/index.es.js",
 	"types": "./dist/index.d.ts",
 	"scripts": {
-		"start": "rollup -c -w",
-		"build": "rollup -c",
+		"start": "rollup --configPlugin typescript -c -w",
+		"build": "rollup --configPlugin typescript -c",
 		"dev": "npm start",
 		"prepare": "npm run build",
 		"storybook": "start-storybook -p 6006",
@@ -30,25 +30,28 @@
 	},
 	"license": "ISC",
 	"devDependencies": {
-		"@babel/core": "^7.17.5",
-		"@rollup/plugin-commonjs": "^16.0.0",
-		"@rollup/plugin-node-resolve": "^10.0.0",
-		"@storybook/addon-actions": "^6.5.14",
-		"@storybook/addon-essentials": "^6.5.14",
-		"@storybook/addon-interactions": "^6.5.14",
-		"@storybook/addon-links": "^6.5.14",
-		"@storybook/react": "^6.5.14",
+		"@babel/core": "^7.20.2",
+		"@rollup/plugin-commonjs": "^23.0.2",
+		"@rollup/plugin-node-resolve": "^15.0.1",
+		"@rollup/plugin-typescript": "^9.0.2",
+		"@storybook/addon-actions": "^6.5.13",
+		"@storybook/addon-essentials": "^6.5.13",
+		"@storybook/addon-interactions": "^6.5.13",
+		"@storybook/addon-links": "^6.5.13",
+		"@storybook/builder-webpack5": "^6.5.13",
+		"@storybook/manager-webpack5": "^6.5.13",
+		"@storybook/react": "^6.5.13",
 		"@storybook/testing-library": "^0.0.13",
 		"@types/react": "^18.0.26",
-		"babel-loader": "^8.2.3",
-		"prettier": "^2.1.2",
+		"babel-loader": "^9.1.0",
+		"prettier": "^2.7.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"rollup": "^2.33.1",
+		"rollup": "^3.2.5",
 		"rollup-plugin-delete": "^2.0.0",
 		"rollup-plugin-peer-deps-external": "^2.2.4",
-		"rollup-plugin-typescript2": "^0.29.0",
-		"typescript": "^4.6.2"
+		"rollup-plugin-typescript2": "^0.34.1",
+		"typescript": "^4.8.4"
 	},
 	"peerDependencies": {
 		"react": "17 || 18"
