--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
 	"module": "./dist/index.es.js",
 	"types": "./dist/index.d.ts",
 	"scripts": {
-		"start": "rollup --configPlugin typescript -c -w",
+		"start": "vite",
 		"build": "rollup --configPlugin typescript -c",
 		"dev": "npm start",
 		"prepare": "npm run build",
-		"storybook": "start-storybook -p 6006",
-		"build-storybook": "npm run build && build-storybook"
+		"build-demo": "vite build"
 	},
 	"repository": {
 		"type": "git",
@@ -34,16 +33,16 @@
 		"@rollup/plugin-commonjs": "^23.0.2",
 		"@rollup/plugin-node-resolve": "^15.0.1",
 		"@rollup/plugin-typescript": "^9.0.2",
-		"@storybook/addon-actions": "^6.5.13",
-		"@storybook/addon-essentials": "^6.4.22",
-		"@storybook/addon-interactions": "^6.5.13",
-		"@storybook/addon-links": "^6.5.13",
-		"@storybook/builder-webpack5": "^6.5.13",
-		"@storybook/manager-webpack5": "^6.5.13",
-		"@storybook/react": "^6.1.21",
-		"@storybook/testing-library": "^0.0.13",
 		"@types/react": "^18.0.26",
+		"@types/react-dom": "^18.2.4",
+		"@types/rollup-plugin-peer-deps-external": "^2.2.1",
+		"@typescript-eslint/eslint-plugin": "^5.59.5",
+		"@typescript-eslint/parser": "^5.59.5",
+		"@vitejs/plugin-react": "^4.0.0",
 		"babel-loader": "^9.1.0",
+		"eslint": "^8.40.0",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.4.1",
 		"prettier": "^2.7.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
@@ -51,7 +50,8 @@
 		"rollup-plugin-delete": "^2.0.0",
 		"rollup-plugin-peer-deps-external": "^2.2.4",
 		"rollup-plugin-typescript2": "^0.34.1",
-		"typescript": "^4.8.4"
+		"typescript": "^5.0.4",
+		"vite": "^4.3.5"
 	},
 	"peerDependencies": {
 		"react": "17 || 18"
