--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
 	"name": "shared-loading-indicator",
 	"version": "1.2.0",
 	"description": "Simplifies loading state sharing.",
+	"type": "module",
 	"main": "./dist/index.js",
-	"module": "./dist/index.es.js",
 	"types": "./dist/index.d.ts",
 	"scripts": {
 		"start": "vite",
@@ -30,9 +30,9 @@
 	"license": "ISC",
 	"devDependencies": {
 		"@babel/core": "^7.20.2",
-		"@rollup/plugin-commonjs": "^23.0.2",
-		"@rollup/plugin-node-resolve": "^15.0.1",
-		"@rollup/plugin-typescript": "^9.0.2",
+		"@rollup/plugin-commonjs": "^26.0.1",
+		"@rollup/plugin-node-resolve": "^15.2.3",
+		"@rollup/plugin-typescript": "^11.1.6",
 		"@types/react": "^18.0.26",
 		"@types/react-dom": "^18.2.4",
 		"@types/rollup-plugin-peer-deps-external": "^2.2.1",
@@ -46,11 +46,10 @@
 		"prettier": "^3.2.5",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"rollup": "^3.2.5",
+		"rollup": "^4.21.2",
 		"rollup-plugin-delete": "^2.0.0",
 		"rollup-plugin-peer-deps-external": "^2.2.4",
-		"rollup-plugin-typescript2": "^0.34.1",
-		"typescript": "^5.0.4",
+		"typescript": "^5.5.4",
 		"vite": "^4.3.5"
 	},
 	"peerDependencies": {
