--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,7 @@
 		"module": "esnext",
 		"target": "es5",
 		"lib": ["es6", "dom", "es2016", "es2017"],
-		"sourceMap": true,
-		"jsx": "react",
+		"jsx": "react-jsx",
 		"moduleResolution": "node",
 		"allowSyntheticDefaultImports": true,
 		"strictNullChecks": true,
