--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"rollup": "^4.21.2",
 		"rollup-plugin-delete": "^2.0.0",
 		"rollup-plugin-peer-deps-external": "^2.2.4",
+		"rollup-plugin-preserve-directives": "^0.4.0",
 		"typescript": "^5.5.4",
 		"vite": "^4.3.5"
 	},
